gave input and button width more dynamic width (percentage) and fixed bug with first air date not showing in known for tv shows and undefined origin country value, also cleaned up code and commentary a bit

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -410,7 +410,7 @@ form button:not(:hover) {
 }
 
 @media (max-width: 800px) {
-  .resu.resultsContatsContainerner {
+  .resultsContainer {
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
@@ -432,10 +432,10 @@ form button:not(:hover) {
 }
 @media (max-width: 490px) {
   form input {
-    width: 280px;
+    width: 85%;
   }
   form button {
-    width: 280px;
+    width: 85%;
     margin-top: 5px;
   }
   footer {
